--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
-Em desenvolvimento ...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<!-- WebStart 1.6.1 | https://github.com/gmasson/webstart | License MIT -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+	<meta name="Resource-type" content="document">
+	<!-- <link rel="canonical" href=""> -->
+	<meta name="Robots" content="all">
+	<meta name="Rating" content="general">
+	<meta name="author" content="Gabriel Masson">
+	<meta name="keywords" content="lorem, lorem ipsum, latim, projects, web, developers, designers, design, layout">
+	<meta name="description" content="LoremPage is the perfect tool to fill your projects with placeholder text quickly and efficiently. Whether it's for testing layouts, creating prototypes, or filling temporary spaces.">
+	<title>Lorem Page</title>
+	
+	<!-- Favicon -->
+	<link href="assets/img/favicon.png" rel="shortcut icon" type="image/x-icon">
+
+	<!-- Icones -->
+	<link href="assets/img/icon.png" rel="icon" type="image/png">
+
+	<!-- Cor do tema -->
+	<meta name="theme-color" content="#333333">
+
+	<!-- Manifest -->
+	<!-- <link href="manifest.json" rel="manifest"> -->
+
+	<!-- Para Redes Socias -->
+	<meta property="og:locale" content="pt_BR">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="assets/img/social.png">
+	<meta name="twitter:image" content="assets/img/social.png">
+
+	<!-- CSS / Styles -->
+	<link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+</head>
+<body>
+
+	<header>
+		<img src="assets/img/logo.png" alt="Logo" loading="lazy">
+		<p>LoremPage is the perfect tool to fill your projects with placeholder text quickly and efficiently. Whether it's for testing layouts, creating prototypes, or filling temporary spaces.</p>
+	</header>
+
+	<section>
+		<article>
+			<p id="paragraph-1" onclick="copy(this.id)" title="Click to copy">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lobortis mattis aliquam faucibus purus. Aliquam purus sit amet luctus venenatis lectus magna. Quis vel eros donec ac. Curabitur vitae nunc sed velit dignissim. Aenean et tortor at risus viverra adipiscing. Id velit ut tortor pretium viverra suspendisse potenti nullam. A condimentum vitae sapien pellentesque habitant morbi tristique senectus et. Neque aliquam vestibulum morbi blandit cursus risus at ultrices. Sit amet luctus venenatis lectus. Aliquam sem et tortor consequat id porta. Feugiat nibh sed pulvinar proin gravida.
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+				</svg>
+			</p>
+
+			<p id="paragraph-2" onclick="copy(this.id)" title="Click to copy">
+				Vitae purus faucibus ornare suspendisse sed nisi lacus sed. Congue quisque egestas diam in. Tellus id interdum velit laoreet. Condimentum vitae sapien pellentesque habitant morbi tristique senectus. Semper eget duis at tellus at urna. Dolor morbi non arcu risus quis varius quam quisque. Tempus quam pellentesque nec nam aliquam sem et tortor. Felis imperdiet proin fermentum leo. Arcu dui vivamus arcu felis. Lacus laoreet non curabitur gravida arcu ac tortor dignissim. Consectetur a erat nam at lectus urna duis. Consectetur purus ut faucibus pulvinar elementum integer enim neque. Elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Augue neque gravida in fermentum et sollicitudin. Amet tellus cras adipiscing enim. Turpis massa sed elementum tempus egestas sed sed risus. Facilisi cras fermentum odio eu feugiat pretium nibh. Praesent elementum facilisis leo vel fringilla est ullamcorper. Erat velit scelerisque in dictum non consectetur a erat nam. Sodales ut etiam sit amet nisl purus in mollis.
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+				</svg>
+			</p>
+
+			<p id="paragraph-3" onclick="copy(this.id)" title="Click to copy">
+				Purus non enim praesent elementum facilisis. Vulputate sapien nec sagittis aliquam malesuada. Ac tortor vitae purus faucibus. Arcu vitae elementum curabitur vitae nunc sed. Venenatis cras sed felis eget velit aliquet. Adipiscing bibendum est ultricies integer. Condimentum mattis pellentesque id nibh tortor id aliquet lectus proin. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Vitae aliquet nec ullamcorper sit amet risus nullam eget. Bibendum arcu vitae elementum curabitur vitae nunc sed velit. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Rutrum quisque non tellus orci ac auctor augue. Cum sociis natoque penatibus et magnis dis parturient. Magna fringilla urna porttitor rhoncus dolor purus non enim. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Molestie nunc non blandit massa enim nec dui.
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+				</svg>
+			</p>
+
+			<p id="paragraph-4" onclick="copy(this.id)" title="Click to copy">
+				At quis risus sed vulputate odio. Maecenas pharetra convallis posuere morbi leo urna molestie at elementum. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Aenean sed adipiscing diam donec. Sed arcu non odio euismod. Massa tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada proin. Et tortor at risus viverra adipiscing at in tellus. In nisl nisi scelerisque eu. Viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor. Nulla facilisi etiam dignissim diam quis enim lobortis. Suspendisse in est ante in nibh mauris cursus. Mauris sit amet massa vitae tortor condimentum. Congue nisi vitae suscipit tellus mauris a diam maecenas. Tellus mauris a diam maecenas sed enim. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus.
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+				</svg>
+			</p>
+
+			<p id="paragraph-5" onclick="copy(this.id)" title="Click to copy">
+				Cras sed felis eget velit. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et. Elementum eu facilisis sed odio morbi quis commodo odio aenean. Aliquam sem et tortor consequat id porta. Hac habitasse platea dictumst vestibulum. Urna cursus eget nunc scelerisque. Massa ultricies mi quis hendrerit. Tincidunt augue interdum velit euismod in pellentesque massa placerat. Ullamcorper eget nulla facilisi etiam dignissim diam quis enim. At ultrices mi tempus imperdiet nulla malesuada pellentesque. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet.
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
+					<path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
+				</svg>
+			</p>
+		</article>
+	</section>
+
+	<section>
+		<h1>Images</h1>
+		<div>
+			<p>Soon we will have images for you to use in your projects</p>
+			<div class="row">
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+				<div class="col">
+					<!-- img -->
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<h1>What is Lorem Ipsum?</h1>
+		<article>
+			<p>Lorem Ipsum is a type of placeholder text often used in the printing and publishing industry to fill temporary spaces in a layout or design. It is used as a placeholder for the actual text that will be inserted later. The main characteristic of Lorem Ipsum is that it resembles readable text, but in reality, it is a sequence of words and letters without apparent meaning.</p>
+			<p>The term "Lorem Ipsum" has origins in classical Latin literature, specifically in the work "De finibus bonorum et malorum" by the author Cicero, dating back to the 1st century BC. The modern version of Lorem Ipsum was popularized in the graphic industry in the 16th century when an unknown printer scrambled the words from a passage of "De finibus" to create a type of sample text.</p>
+			<p>Due to its semantically null nature, Lorem Ipsum is useful for designers, developers, and editors who need to visualize the layout of a page without being distracted by real content. Additionally, it allows evaluating the text flow and overall appearance of a page without the need for meaningful text.</p>
+		</article>
+	</section>
+
+	<footer>
+		
+			<p><strong>LoremPage</strong> &copy; 2024</p>
+			<div class="links">
+				<a href="https://github.com/gmasson/lorem.page" target="_blank" rel="nofollow" title="Click to access">Collaborate on Github</a>
+				&nbsp; | &nbsp;
+				<a href="https://gabrielmasson.com.br/" target="_blank" rel="nofollow" title="Click to access">Developed by Gabriel Masson</a>
+			</div>
+		</div>
+	</footer>
+	<script type="text/javascript">
+		function copy(elementId) {
+            const textToCopy = document.getElementById(elementId).innerText;
+            const tempTextArea = document.createElement('textarea');
+            tempTextArea.value = textToCopy;
+            document.body.appendChild(tempTextArea);
+            tempTextArea.select();
+            tempTextArea.setSelectionRange(0, 99999);
+            document.execCommand('copy');
+            document.body.removeChild(tempTextArea);
+            alert('Copied text');
+        }
+	</script>
+</body>
+</html>
